# x_bible

./: Cargo.toml  build.rs
data/: resources.gresource.xml
data/icons/: icons.gresource.xml
data/style/: style.css
resources/style/: style.css
src/: app.rs  main.rs
src/features/: mod.rs
src/features/bible/components/page/: helpers.rs  mod.rs  model.rs  verse.rs  word.rs
src/features/bible/transilation_engines/: mod.rs
src/features/bible/transilation_engines/osis_engine/: core.rs  helpers.rs  mod.rs
src/features/bible/transilation_engines/osis_engine/components/: mod.rs  page.rs  verse.rs  word.rs
src/features/core/: mod.rs  sword_engine.rs  sword_module.rs
src/features/core/components/: mod.rs  sidebar.rs
src/features/core/module_engine/: mod.rs  sword_engine.rs  sword_module.rs
src/features/core/pages/: mod.rs
src/features/core/pages/store/: mod.rs  store_page.rs
src/features/core/pages/study/: mod.rs  study_page.rs
src/features/store/: mod.rs
src/features/store/services/: download.rs
src/features/store/workers/: downloads_service_worker.rs  mod.rs
src/utils/: mod.rs  reqwest_error.rs
sword/: CMakeLists.txt
sword/src/modules/common/: rawstr4.cpp
sword/src/modules/filters/: cipherfil.cpp  latin1utf16.cpp  latin1utf8.cpp  scsuutf8.cpp  utf8arshaping.cpp  utf8html.cpp  utf8latin1.cpp  utf8nfc.cpp  utf8nfkd.cpp  utf8scsu.cpp
sword/src/utilfuns/: regex.c
