[package]
name = "x_bible"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.8.1", package = "libadwaita", features = ["v1_8"] }
gtk = { version = "0.10.3", package = "gtk4", features = ["v4_12"] }
relm4 = { version = "0.10.1", features = ["all"] }
relm4-components = { version = "0.10.1", features = ["libadwaita", "reqwest"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }
url = "2.5.7"
async-trait = "0.1.89"
chrono = "0.4.42"
dotenv = "0.15.0"
rand = "0.9.2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
sha2 = "0.10.9"
hex = "0.4.3"
directories = "6.0.0"
quick-xml = "0.39.0"
libc = "0.2.180"
regex = "1.12.2"
scraper = "0.25.0"
ego-tree = "0.10.0"


[build-dependencies]
cmake = "0.1.57"
bindgen = "0.72.1"
glib-build-tools = "0.21.0"
